[package]
name = "ban"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scout = { git = "https://github.com/jmkng/scout" }
unicode-ident = "1.0.10"
unicode-width = "0.1.10"
serde = "1.0.171"
serde_json = "1.0.102"