[package]
name = "ban"
version = "0.60.1"
edition = "2021"
description = "A minimal and fast template engine."
license = "MIT"
repository = "https://github.com/jmkng/ban"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
morel = "0.3.0"
unicode-ident = "1.0.10"
unicode-width = "0.1.10"
serde = "1.0.171"
serde_json = "1.0.102"